<resources>
    <string name="app_name">ImageRedactorCFT</string>
    <string name="dlg_chose_load_tittle">Выберите источник</string>
    <string name="btn_rotate">Повернуть</string>
    <string name="btn_gray">Чёрно-белый</string>
    <string name="btn_mirror">Отразить</string>
    <string name="btn_exif">EXIF</string>
    <string name="rv_img_content_descr">Обработанное изображение</string>
    <string name="bitmap_null_error">Произошла ошибка при открытии файла! Файл не найден!</string>
    <string name="pop_menu_sourсe">Сделать источником</string>
    <string name="pop_menu_delete">Удалить</string>
    <string name="delete_file_error">Не удалось удалить файл</string>
    <string name="tv_text_exifstorage">Путь:</string>
    <string name="tv_text_exifmimetype">Типы MIME:</string>
    <string name="tv_text_exifresolution">Разрешение:</string>
    <string name="tv_text_exifcamera">Камера:</string>
    <string name="tv_text_exifiso">ISO:</string>
    <string name="tv_text_exifdate">Дата:</string>
    <string name="tv_text_exifpower">Светосила:</string>
    <string name="tv_text_exifsize">Размер:</string>
    <string name="exif_no_data">Нет данных</string>
    <string name="error_no_source">Не выбран источник для обработки!</string>
    <string name="error_no_url">Введите URL-адрес изображения!</string>
    <string name="error_download_url">Не удалось загрузить изображение!</string>
    <string name="error_permission_external">Для доступа к галереи необходимо разрешение!</string>
    <string name="dlg_download_title">Введите адрес изображения</string>
    <string name="dlg_download_yes">Загрузить</string>
    <string name="dlg_download_no">Отмена</string>
    <string name="intent_load_gallery">Select Picture</string>
</resources>
