<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scroll"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/tv_text_exifresolution"
				android:textAlignment="textEnd"
				android:textSize="@dimen/text_size" />

		<TextView
			android:id="@+id/tv_exifresolution"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.6"
			android:paddingLeft="@dimen/left_padding"
			android:textSize="@dimen/text_size" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/tv_text_exifcamera"
				android:textAlignment="textEnd"
				android:textSize="@dimen/text_size" />

			<TextView
				android:id="@+id/tv_exifcamera"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.6"
				android:paddingLeft="@dimen/left_padding"
				android:textSize="@dimen/text_size" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/tv_text_exifiso"
				android:textAlignment="textEnd"
				android:textSize="@dimen/text_size" />

			<TextView
				android:id="@+id/tv_exifiso"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.6"
				android:paddingLeft="@dimen/left_padding"
				android:textSize="@dimen/text_size" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/tv_text_exifpower"
				android:textAlignment="textEnd"
				android:textSize="@dimen/text_size" />

			<TextView
				android:id="@+id/tv_exiffpower"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.6"
				android:paddingLeft="@dimen/left_padding"
				android:textSize="@dimen/text_size" />
		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:weightSum="1">
			<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.4"
				android:text="@string/tv_text_exifdate"
				android:textAlignment="textEnd"
				android:textSize="@dimen/text_size" />

			<TextView
				android:id="@+id/tv_exifdate"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="0.6"
				android:paddingLeft="@dimen/left_padding"
				android:textSize="@dimen/text_size" />
		</LinearLayout>
</LinearLayout>
</ScrollView>